--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Node Server Testing Challenge",
   "main": "server.js",
   "scripts": {
-    "test:watch": "jest --watch",
-    "test": "jest",
-    "server": "node index.js"
+    "test:watch": "cross-env NODE_ENV=testing jest --watch",
+    "test": "cross-env NODE_ENV=testing jest",
+    "server": "cross-env NODE_ENV=production node index.js"
   },
   "jest": {
     "testEnvironment": "node"
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
   "devDependencies": {
     "jest": "^24.9.0",
+    "nodemon": "^2.0.4",
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "cross-env": "^7.0.2",
     "express": "^4.17.1"
   }
 }
